# fem_solver

./: CLAUDE.md  LICENSE  README.md  SPECS.md  fem_solver_roadmap.md  gitignore  pyproject.toml
benchmarks/: bench_assembler_all.py  bench_assembler_quad4.py
docs/: TUTORIAL.md
examples/: buckling_euler_column.py  cantilever_sri_comparison.py  convergence_tri3_vs_tri6.py  cube_compression_hexa8.py  l_bracket_hexa8.py  l_bracket_results.vtu  modal_bar.py  modal_beam_2d.py  modal_beam_3d_hexa8.py  plate_with_hole.py  plate_with_hole_zz.py  portal_frame_3d.py  truss_bridge.py
femsolver/: __init__.py
femsolver/core/: __init__.py  assembler.py  boundary.py  diagnostics.py  element.py  material.py  mesh.py  mpc.py  sections.py  solver.py
femsolver/dynamics/: __init__.py  damping.py  harmonic.py  modal.py  rayleigh.py  transient.py
femsolver/elements/: __init__.py  bar2d.py  beam2d.py  beam2d_timoshenko.py  beam3d.py  hexa20.py  hexa8.py  quad4.py  quad8.py  tetra10.py  tetra4.py  tri3.py  tri6.py
femsolver/io/: __init__.py  mesh_io.py
femsolver/postprocess/: __init__.py  stress.py  (+4 more)
memory/: project_quad8_hexa20.md
tests/: test_assembly.py  test_bar2d.py  test_beam2d.py  test_beam2d_timoshenko.py  test_beam3d.py  test_buckling.py  test_damping.py  test_diagnostics.py  test_error_estimator.py  test_harmonic.py  test_hexa20.py  test_hexa8.py  test_loads.py  test_modal.py  test_modal_beam_3d.py  test_mpc.py  test_quad4.py  test_quad8.py  test_rayleigh.py  test_sections.py  test_sri.py  test_tetra10.py  test_tetra4.py  test_transient.py  test_tri3.py  test_tri6.py
